src/components/app.css
.done {
  color: red;
}

* {
  /* background-color: rgb(189, 189, 189); */
}

.content--container {
  padding: 3vw;
  display: flex;
  max-width: 100vw;
  justify-content: center;
  /* gap: 3vw; */
}

.content--cardsList,
.content--cardsList * {
  background-color: white;
}
.content--cardsList {
  background-color: white;
  padding: 2vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* width: 50%; */
  flex: 1;
  max-width: 40%;
}

.cardlist--card {
  max-height: 75%;
  margin-left: 2%;
}

.content--cardsList--card {
  align-items: center;
  display: flex;
  height: 50px;
  width: 80%;
  max-width: 300px;
  border: 1px solid black;
  margin-bottom: 2vh;
  cursor: pointer;
  gap: 15px;
  border-radius: 8px;
  padding: 0 5px;
}

.content--card--image {
  max-width: 300px;
  max-height: auto;
}

.content--benefits {
  padding: 2vw;
  width: 50%;
  height: 75vh;
  overflow: scroll;
}
.content--benefits,
.content--benefits * {
  background-color: white;
}

.card--selected {
  background-color: rgb(201, 201, 201);
}

/* 320px — 480px: Mobile devices
481px — 768px: iPads, Tablets
769px — 1024px: Small screens, laptops
1025px — 1200px: Desktops, large screens */

@media screen and (max-width: 1024px) {
  .content--card {
    width: 70%;
  }
}

@media screen and (max-width: 768px) {
  .content--cardsList {
    overflow: scroll;
    padding: 2vw;
    align-items: flex-start;
    width: 35%;
    gap: 10px;
  }
  .content--cardsList--card {
    width: 100%;
  }
  .content--card--image {
    max-width: 230px;
  }
}

@media screen and (max-width: 480px) {
  .content--container {
    flex-direction: column;
  }

  .content--cardsList {
    flex-direction: row;
    overflow: scroll;
    padding: 2vw;
    align-items: flex-start;
    width: 90%;
    gap: 10px;
  }
  .content--cardsList--card {
    display: flex;
    height: 70px;
    min-width: 200px;
    margin-bottom: 1vh;
    gap: 10px;
    padding: 0 5px;
  }

  .content--benefits {
    padding: 2vw;
    width: 90%;
    height: 75vh;
    overflow: scroll;
  }

  .content--card--image {
    max-width: 260px;
  }
}

